Fixes spacing.

--- a/src/sass/partials/_blog_preload.scss
+++ b/src/sass/partials/_blog_preload.scss
@@ -13,25 +13,27 @@
     background-origin: padding-box;
     background-position: center 100%;
     background-repeat: no-repeat;
+    @media (prefers-color-scheme: dark) {
+        background-image: linear-gradient(to bottom, transparent 75%, $light 75%);
+    } 
 }
 .tag-results {
   padding-top: 0;
-  margin: rem(180) auto 0;
+  margin: 0 auto;
   max-width: rem(700);
 
   @media screen and (max-width: em(720)) {
-    margin: rem(180) rem(10) 0;
+    margin: 0 rem(10);
   }
 
   @media screen and (max-width: em(450)) {
-    margin: rem(140) rem(10) 0;
+    margin: 0 rem(10);
   }
 
   .blog-entry-text {
     padding: 0;
   }
 } 
-
 .blog-single-entry {
     margin-top: rem(60);
 
